k8s/frontend/overlays/dev/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vista-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
